fix center alignment, only for new_card not all cards

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
   margin-top: 10px;
   color: gray;
 }
-.new_card h3, h1 {
+.new_card h3, .new_card h1 {
   text-align: center;
 }
 .new_card h1 {
